# llvmPractice

./: README.md
llvmCountInstructions/: README.md  main.c  pass.cpp
llvmDetectRecursive/: README.md  main.c  pass.cpp
llvmFunctionName/: CMakeLists.txt  README.md  main.c  pass.cpp
